# Python_basic_Otus

./: README.md
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  pyproject.toml  view.py
