[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["AndrKvitch <102856320+AndrKvitch@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework_03"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"
fastapi = "^0.95.1"
uvicorn = {extras = ["standart"], version = "^0.22.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
